--- a/src/components/Tile.scss
+++ b/src/components/Tile.scss
@@ -1,9 +1,18 @@
 .tile {
+  user-select: none;
   background-color: blue;
-  height: 10px;
-  width: 10px;
+  height: 25px;
+  width: 25px;
 }
 
 .tile--sweeped {
+  background-color: green;
+}
+
+.tile--has-mine {
   background-color: red;
+}
+
+.tile--should-have-mine {
+  background-color: darkred;
 }
