--- a/src/index.scss
+++ b/src/index.scss
@@ -7,4 +7,8 @@
   height: 100%;
   align-items: center;
   justify-content: center;
+
+  .app__message {
+    font-family: 'Courier New', Courier, monospace;
+  }
 }
